--- a/app/index.html
+++ b/app/index.html
@@ -217,8 +217,7 @@
         </div>
     </div>
 </div>
-
-<div class="container" style="max-width: 1360px">
+<div class="container" style="max-width: 1360px; margin-bottom: 50px">
     <div class="trending">
         <div class="trending-title">
             NEW OFFERS
@@ -243,8 +242,10 @@
                         </div>
                     </div>
                     <div class="trending-slider-item-price">
-                        <span class="price-act price-through">$49.50</span>
-                        <span class="price-disc">$38.20</span>
+                        <span class="price-act">$49.50</span>
+                        <span class="new-label">
+                            <img src="images/src/new.svg" alt="">
+                        </span>
                     </div>
                 </div>
                 <div class="trending-slider-item">
@@ -265,8 +266,10 @@
                         </div>
                     </div>
                     <div class="trending-slider-item-price">
-                        <span class="price-act price-through">$49.50</span>
-                        <span class="price-disc">$38.20</span>
+                        <span class="price-act">$49.50</span>
+                        <span class="new-label">
+                            <img src="images/src/new.svg" alt="">
+                        </span>
                     </div>
                 </div>
                 <div class="trending-slider-item">
@@ -287,8 +290,10 @@
                         </div>
                     </div>
                     <div class="trending-slider-item-price">
-                        <span class="price-act price-through">$49.50</span>
-                        <span class="price-disc">$38.20</span>
+                        <span class="price-act">$49.50</span>
+                        <span class="new-label">
+                            <img src="images/src/new.svg" alt="">
+                        </span>
                     </div>
                 </div>
                 <div class="trending-slider-item">
@@ -309,8 +314,10 @@
                         </div>
                     </div>
                     <div class="trending-slider-item-price">
-                        <span class="price-act price-through">$49.50</span>
-                        <span class="price-disc">$38.20</span>
+                        <span class="price-act">$49.50</span>
+                        <span class="new-label">
+                            <img src="images/src/new.svg" alt="">
+                        </span>
                     </div>
                 </div>
                 <div class="trending-slider-item">
@@ -332,7 +339,9 @@
                     </div>
                     <div class="trending-slider-item-price">
                         <span class="price-act">$49.50</span>
-                        <!--                        <span class="price-disc">$38.20</span>-->
+                        <span class="new-label">
+                            <img src="images/src/new.svg" alt="">
+                        </span>
                     </div>
                 </div>
                 <div class="trending-slider-item">
@@ -354,7 +363,9 @@
                     </div>
                     <div class="trending-slider-item-price">
                         <span class="price-act">$49.50</span>
-                        <!--                        <span class="price-disc">$38.20</span>-->
+                        <span class="new-label">
+                            <img src="images/src/new.svg" alt="">
+                        </span>
                     </div>
                 </div>
                 <div class="trending-slider-item">
@@ -375,8 +386,10 @@
                         </div>
                     </div>
                     <div class="trending-slider-item-price">
-                        <span class="price-act price-through">$49.50</span>
-                        <span class="price-disc">$38.20</span>
+                        <span class="price-act">$49.50</span>
+                        <span class="new-label">
+                            <img src="images/src/new.svg" alt="">
+                        </span>
                     </div>
                 </div>
                 <div class="trending-slider-item">
@@ -398,10 +411,291 @@
                     </div>
                     <div class="trending-slider-item-price">
                         <span class="price-act">$49.50</span>
-                        <!--                        <span class="price-disc">$38.20</span>-->
+                        <span class="new-label">
+                            <img src="images/src/new.svg" alt="">
+                        </span>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <div class="banner" style="margin-bottom: 50px">
+        <div class="banner-img">
+            <img src="images/src/main-banner-2.jpg" alt="">
+        </div>
+        <div class="banner-desc">
+            <div class="banner-desc-title" style="font-size: 32px; width: 540px">
+                THE BEST GIFT IS LETTING HER CHOOSE EXACTLY WHAT SHE WANTS
+            </div>
+            <div class="banner-desc-button second">
+                <a href="#">Get a certificate</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container" style="max-width: 1360px; margin-bottom: 50px">
+    <div class="trending">
+        <div class="trending-title">
+            SALE
+        </div>
+        <div class="trending-slider-block">
+            <div class="trending-slider">
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/sale-1.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Sensual Unbounded Triangle Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/sale-2.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Gioia Lace Super Push-Up Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/sale-3.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Spices Elettra Super Push-Up Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/sale-4.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Delicate Love Balconette Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/sale-2.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Sensual Unbounded Triangle Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                       <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/sale-1.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Gioia Lace Super Push-Up Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/sale-3.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Sensual Unbounded Triangle Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+                <div class="trending-slider-item">
+                    <div class="trending-slider-item-img">
+                        <img src="images/src/sale-4.jpg" alt="">
+                    </div>
+                    <div class="trending-slider-item-name"><a href="">Delicate Love Balconette Bra</a></div>
+                    <div class="trending-slider-item-rev">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="rev-count">
+                            <a href="">(36 Reviews)</a>
+                        </div>
+                    </div>
+                    <div class="trending-slider-item-price">
+                        <span class="price-act price-through">$49.50</span>
+                        <span class="price-disc">$38.20</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="subscribe">
+        <div class="subscribe-title">
+            -15%* on first purchase for newsletter subscription
+        </div>
+        <div class="subscribe-form">
+            <form action="">
+                <input class="subscribe-form-input" type="text" placeholder="Email">
+                <button class="subscribe-form-button" type="submit">Subscribe</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="benefits">
+        <div class="benefits-item">
+            <div class="benefits-item-img">
+                <img src="images/src/benefits-1.svg" alt="">
+            </div>
+            <div class="benefits-item-title">
+                Support 24/7
+            </div>
+            <div class="benefits-item-link">
+                <a href="">Learn more</a>
+            </div>
+        </div>
+        <div class="benefits-item">
+            <div class="benefits-item-img">
+                <img src="images/src/benefits-2.svg" alt="">
+            </div>
+            <div class="benefits-item-title">
+                Gift cards & E-cards
+            </div>
+            <div class="benefits-item-link">
+                <a href="">Learn more</a>
+            </div>
+        </div>
+        <div class="benefits-item">
+            <div class="benefits-item-img">
+                <img src="images/src/benefits-3.svg" alt="">
+            </div>
+            <div class="benefits-item-title">
+                Free shipping
+            </div>
+            <div class="benefits-item-link">
+                <a href="">Learn more</a>
+            </div>
+        </div>
+        <div class="benefits-item">
+            <div class="benefits-item-img">
+                <img src="images/src/benefits-4.svg" alt="">
+            </div>
+            <div class="benefits-item-title">
+                Gift wrapping available
+            </div>
+            <div class="benefits-item-link">
+                <a href="">Learn more</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="instagram">
+        <div class="instagram-title">Follow us @ma_cherie</div>
+        <div class="instagram-img">
+            <div class="instagram-img-item"><img src="images/src/insta-1.jpg" alt=""></div>
+            <div class="instagram-img-item"><img src="images/src/insta-2.jpg" alt=""></div>
+            <div class="instagram-img-item"><img src="images/src/insta-3.jpg" alt=""></div>
+            <div class="instagram-img-item"><img src="images/src/insta-4.jpg" alt=""></div>
+            <div class="instagram-img-item"><img src="images/src/insta-5.jpg" alt=""></div>
+            <div class="instagram-img-item"><img src="images/src/insta-6.jpg" alt=""></div>
         </div>
     </div>
 </div>
