--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -1,5 +1,43 @@
 
+<footer>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="footer">
+                <div class="footer-links">
+                    <div class="footer-links-title">HELP</div>
+                    <div class="footer-links-item"><a href="">Customer Service</a></div>
+                    <div class="footer-links-item"><a href="">Live Chat</a></div>
+                    <div class="footer-links-item"><a href="">About VS Credit Card</a></div>
+                    <div class="footer-links-item"><a href="">Find a Store</a></div>
+                    <div class="footer-links-item"><a href="">Careers</a></div>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-links-title">ORDERS & RETURNS</div>
+                    <div class="footer-links-item"><a href="">Order Status</a></div>
+                    <div class="footer-links-item"><a href="">Shipping Information</a></div>
+                    <div class="footer-links-item"><a href="">Return Policy</a></div>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-links-title">SERVICES</div>
+                    <div class="footer-links-item"><a href="">Store Offer & Events</a></div>
+                    <div class="footer-links-item"><a href="">Get the iOS App</a></div>
+                    <div class="footer-links-item"><a href="">Get the Android App</a></div>
+                    <div class="footer-links-item"><a href="">Pay My Bill</a></div>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-links-social">To learn more Ma Chérie</div>
+                    <div class="footer-links-social-block">
+                        <div class="footer-links-social-img"><a href=""><i class="fa-brands fa-facebook"></i></a></div>
+                        <div class="footer-links-social-img"><a href=""><i class="fa-brands fa-youtube"></i></a></div>
+                        <div class="footer-links-social-img"><a href=""><i class="fa-brands fa-instagram"></i></a></div>
+                        <div class="footer-links-social-img"><a href=""><i class="fa-brands fa-pinterest"></i></a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </div>
+</footer>
 
 </body>
 </html>
